--- a/projects/shakespeare/Makefile
+++ b/projects/shakespeare/Makefile
@@ -2,3 +2,10 @@
 
 run:
 	nvcc ./shakespeare.cu -o shakespeare
+	./shakespeare.exe
+
+build:
+	nvcc ./shakespeare.cu -o shakespeare
+
+build_bigram:
+	nvcc ./bigram_shakespeare.cu -o bigram_shakespeare
